openai schema added
